syntax = "proto3";

option csharp_namespace = "MessagingService";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package StoredMessagesRpc;

service StoredMessagesServiceRpc {
  rpc GetMessages (GetMessagesRequestRpc) returns (GetMessagesResponseRpc);
  rpc SearchMessages (SearchMessagesRequestRpc) returns (SearchMessagesResponseRpc);
  rpc DeleteMessage (DeleteMessageRequestRpc) returns (DeleteMessageResponseRpc);
}

message GetMessagesRequestRpc {
  int32 count = 1;
  int32 offset = 2;
}

message MessageRpc {
  string id = 1;
  string text = 2;
  google.protobuf.Timestamp sentAt = 3;
}

message GetMessagesResponseRpc {
  repeated MessageRpc messages = 1;
}

message SearchMessagesRequestRpc {
  int32 count = 1;
  int32 offset = 2;
  string filter = 3;
}
message SearchMessagesResponseRpc {
  repeated MessageRpc messages = 1;
}

message DeleteMessageRequestRpc {
  string messageId = 1;
}

message DeleteMessageResponseRpc{
  bool success = 1;
  google.protobuf.StringValue reason = 2;  
}